clarify addTimestamp tagging

--- a/action.yml
+++ b/action.yml
@@ -41,7 +41,7 @@ inputs:
     required: false
     default: "false"
   addTimestamp:
-    description: "Suffixes a build timestamp to the Docker tag"
+    description: "Suffixes a build timestamp to the branch-based Docker tag"
     required: false
     default: "false"
 outputs:
