--- a/action.yml
+++ b/action.yml
@@ -44,6 +44,10 @@ inputs:
     description: "Suffixes a build timestamp to the branch-based Docker tag"
     required: false
     default: "false"
+  numericTimestamp:
+    description: "Use a numeric timestamp"
+    required: false
+    default: "false"
 outputs:
   imageFullName:
     description: "Full name of the Docker image with registry prefix and tag suffix"
