--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -7,11 +7,19 @@ on:
     branches:
       - master
   pull_request:
+  repository_dispatch:
+    types: [ok-to-test-command]
 
 jobs:
   e2e:
     name: ${{ matrix.name }}
     runs-on: ubuntu-latest
+    if: 
+      (github.event_name == 'pull_request' && 
+      github.event.pull_request.head.repo.full_name == github.repository) ||
+      (github.event_name == 'repository_dispatch' &&
+      github.event.client_payload.slash_command.sha != '' &&
+      contains(github.event.client_payload.pull_request.head.sha, github.event.client_payload.slash_command.sha))
     strategy:
       fail-fast: false
       matrix:
