--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,10 @@
 name: 'Unit Tests'
 
-on: [push, pull_request]
+on: [push]
 
 jobs:
   run-tests:
+    name: Unit Tests
     runs-on: ubuntu-latest
     steps:
       - name: Check out code
