Add ok-to-test workflow (#86)
Update workflows to only grant access to e2e tests with /ok-to-test command

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "docker-build-push-action",
-  "version": "3.2.0",
+  "version": "5.7.0",
   "description": "Docker Build & Push Action",
   "main": "src/index.js",
   "scripts": {
@@ -40,7 +40,7 @@
     "dateformat": "^4.6.3"
   },
   "devDependencies": {
-    "@zeit/ncc": "^0.22.3",
+    "@vercel/ncc": "^0.33.3",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^8.5.0",
