--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -1,17 +1,13 @@
-name: 'e2e Tests'
+name: 'Nightly Tests'
 
 on:
-  repository_dispatch:
-    types: [ok-to-test-command]
+  schedule:
+    - cron: '0 8 * * *' # everyday at 8am UTC
 
 jobs:
   e2e:
     name: ${{ matrix.name }}
     runs-on: ubuntu-latest
-    if: 
-      github.event_name == 'repository_dispatch' &&
-      github.event.client_payload.slash_command.sha != '' &&
-      contains(github.event.client_payload.pull_request.head.sha, github.event.client_payload.slash_command.sha)
     strategy:
       fail-fast: false
       matrix:
@@ -50,8 +46,6 @@ jobs:
     steps:
       - name: Check out code
         uses: actions/checkout@v2
-        with:
-          ref: 'refs/pull/${{ github.event.client_payload.pull_request.number }}/merge'
 
       - name: Build and push Docker image
         id: docker
@@ -75,34 +69,20 @@ jobs:
           docker pull ${{ steps.docker.outputs.imageFullName }}:${{ github.run_id }}
           docker image inspect ${{ steps.docker.outputs.imageFullName }}:${{ github.run_id }}
 
-      - uses: actions/github-script@v5
-        name: Update check run
-        if: ${{ always() }}
-        env:
-          number: ${{ github.event.client_payload.pull_request.number }}
-          job: ${{ github.job }}
-          conclusion: ${{ job.status }} 
+      - name: Raise issue on failure
+        if: failure()
+        uses: actions/github-script@v5
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            const { data: pull } = await github.rest.pulls.get({
-              ...context.repo,
-              pull_number: process.env.number
-            });
-            const ref = pull.head.sha;
-            const { data: checks } = await github.rest.checks.listForRef({
-              ...context.repo,
-              ref
-            });
-            const check = checks.check_runs.filter(c => c.name === process.env.job);
-            const { data: result } = await github.rest.checks.update({
-              ...context.repo,
-              check_run_id: check[0].id,
-              status: 'completed',
-              conclusion: process.env.conclusion
-            });
-            return result;
-      
-        - name: Dump context
-          if: always()
-          uses: crazy-max/ghaction-dump-context@v1
+            github.issues.create({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              title: 'e2e test failure',
+              body: `Tests failed in run https://github.com/mr-smithers-excellent/docker-build-push/actions/runs/${context.runId}`,
+              labels: ['Triage']
+            })
+
+      - name: Dump context
+        if: always()
+        uses: crazy-max/ghaction-dump-context@v1
