--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -57,9 +57,8 @@ jobs:
         uses: actions/github-script@v5
         if: ${{ always() }}
         env:
+          image: ${{ matrix.image }}
           number: ${{ github.event.client_payload.pull_request.number }}
-          job: ${{ github.job }}
-          conclusion: ${{ job.status }} 
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
@@ -104,6 +103,7 @@ jobs:
           number: ${{ github.event.client_payload.pull_request.number }}
           job: ${{ github.job }}
           conclusion: ${{ job.status }} 
+          image: ${{ matrix.image }}
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
