use name instead of image

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -57,7 +57,7 @@ jobs:
         uses: actions/github-script@v5
         if: ${{ always() }}
         env:
-          image: ${{ matrix.image }}
+          name: ${{ matrix.name }}
           number: ${{ github.event.client_payload.pull_request.number }}
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
@@ -69,7 +69,7 @@ jobs:
             const sha = pull.head.sha;
             const { data: check } = await github.rest.checks.create({
               ...context.repo,
-              name: process.env.image,
+              name: process.env.name,
               head_sha: sha
             });
             return check;
@@ -78,7 +78,7 @@ jobs:
         uses: actions/github-script@v5
         if: ${{ always() }}
         env:
-          image: ${{ matrix.image }}
+          name: ${{ matrix.name }}
           number: ${{ github.event.client_payload.pull_request.number }}
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
@@ -90,7 +90,7 @@ jobs:
             const sha = pull.head.sha;
             const { data: check } = await github.rest.checks.create({
               ...context.repo,
-              name: process.env.image,
+              name: process.env.name,
               head_sha: sha
             });
             return check;
@@ -124,7 +124,7 @@ jobs:
           number: ${{ github.event.client_payload.pull_request.number }}
           job: ${{ github.job }}
           conclusion: ${{ job.status }} 
-          image: ${{ matrix.image }}
+          name: ${{ matrix.name }}
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
@@ -137,7 +137,7 @@ jobs:
               ...context.repo,
               ref
             });
-            const check = checks.check_runs.filter(c => c.name === process.env.image);
+            const check = checks.check_runs.filter(c => c.name === process.env.name);
             const { data: result } = await github.rest.checks.update({
               ...context.repo,
               check_run_id: check[0].id,
