--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -29,11 +29,11 @@ jobs:
             username: GCR_USERNAME
             password: GCR_PASSWORD
             labels: org.opencontainers.image.description="A Hello World image used for e2e tests"
+            addTimestamp: true
 
           - name: ECR e2e
             image: hello-world
             registry: 026181534292.dkr.ecr.us-west-2.amazonaws.com
-            enableBuildKit: true
 
           - name: GHCR Legacy e2e
             image: docker-build-push/e2e-image
@@ -47,6 +47,7 @@ jobs:
             githubOrg: docker-action-e2e
             username: GHCR_USERNAME
             password: GHCR_TOKEN
+            enableBuildKit: true
 
     steps:
       - name: Check out code
