--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -88,6 +88,7 @@ jobs:
           username: ${{ secrets[matrix.username] }}
           password: ${{ secrets[matrix.password] }}
           addLatest: ${{ matrix.addLatest }}
+          addTimestamp: ${{ matrix.addTimestamp }}
           labels: ${{ matrix.labels }}
           enableBuildKit: ${{ matrix.enableBuildKit }}
         env:
