--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -31,7 +31,7 @@ jobs:
             registry: gcr.io
             username: GCR_USERNAME
             password: GCR_PASSWORD
-            labels: org.opencontainers.image.description="A Hello World image used for e2e tests"
+            labels: org.opencontainers.image.description="A Hello World image used for e2e testz"
             addLatest: false
             addTimestamp: true
             enableBuildKit: false
