test parallel builds

--- a/.github/workflows/nightly-e2e.yml
+++ b/.github/workflows/nightly-e2e.yml
@@ -61,6 +61,7 @@ jobs:
           username: ${{ secrets[matrix.username] }}
           password: ${{ secrets[matrix.password] }}
           addLatest: ${{ matrix.addLatest }}
+          addTimestamp: ${{ matrix.addTimestamp }}
           labels: ${{ matrix.labels }}
           enableBuildKit: ${{ matrix.enableBuildKit }}
         env:
