--- a/.github/workflows/nightly-e2e.yml
+++ b/.github/workflows/nightly-e2e.yml
@@ -17,14 +17,14 @@ jobs:
             registry: docker.io
             username: DOCKERHUB_USERNAME
             password: DOCKERHUB_PASSWORD
-            labels: org.opencontainers.image.description="A Hello World image used for e2e tests"
+            labels: org.opencontainers.image.description="A Hello World image used for e2e testz"
 
           - name: GCR
             image: orbital-bank-301021/hello-world
             registry: gcr.io
             username: GCR_USERNAME
             password: GCR_PASSWORD
-            labels: org.opencontainers.image.description="A Hello World image used for e2e tests"
+            labels: org.opencontainers.image.description="A Hello World image used for e2e testz"
             addTimestamp: true
 
           - name: ECR
