--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -64,10 +64,10 @@ jobs:
     steps:
       - name: Check out code
         uses: actions/checkout@v3
-        with:
-          ref: ${{ github.event.pull_request.head.sha }}
         # with:
-        #   ref: 'refs/pull/${{ github.event.client_payload.pull_request.number }}/merge'
+        #   ref: ${{ github.event.pull_request.head.sha }}
+        with:
+          ref: 'refs/pull/${{ github.event.client_payload.pull_request.number }}/merge'
 
       - name: Create check run
         uses: actions/github-script@v5
