--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -1,6 +1,8 @@
 name: 'e2e Tests'
 
 on:
+  push:
+    branches: [master]
   repository_dispatch:
     types: [ok-to-test-command]
 
@@ -8,10 +10,6 @@ jobs:
   e2e:
     name: ${{ matrix.name }}
     runs-on: ubuntu-latest
-    if: 
-      github.event_name == 'repository_dispatch' &&
-      github.event.client_payload.slash_command.sha != '' &&
-      contains(github.event.client_payload.pull_request.head.sha, github.event.client_payload.slash_command.sha)
     strategy:
       fail-fast: false
       matrix:
@@ -32,13 +30,16 @@ jobs:
 
           - name: ECR e2e
             image: hello-world
+            directory: e2e/test-build-dir
             registry: 026181534292.dkr.ecr.us-west-2.amazonaws.com
+            addTimestamp: true
 
           - name: GHCR Legacy e2e
             image: docker-build-push/e2e-image
             registry: docker.pkg.github.com
             username: GH_USERNAME
             password: GITHUB_TOKEN
+            enableBuildKit: true
 
           - name: GHCR e2e
             image: hello-world
@@ -78,15 +79,20 @@ jobs:
         id: docker
         uses: ./
         with:
-          dockerfile: ./e2e/Dockerfile
           image: ${{ matrix.image }}
           tags: latest, ${{ github.run_id }}
+          addLatest: ${{ matrix.addLatest }}
+          addTimestamp: ${{ matrix.addTimestamp }}
           registry: ${{ matrix.registry }}
-          githubOrg: ${{ matrix.githubOrg }}
+          dockerfile: ./e2e/Dockerfile
+          directory: ${{ matrix.directory }}
+          buildArgs: ${{ matrix.buildArgs }}
+          labels: ${{ matrix.labels }}
+          target: ${{ matrix.target }}
           username: ${{ secrets[matrix.username] }}
           password: ${{ secrets[matrix.password] }}
-          addLatest: ${{ matrix.addLatest }}
-          labels: ${{ matrix.labels }}
+          githubOrg: ${{ matrix.githubOrg }}
+          enableBuildKit:  ${{ matrix.enableBuildKit }}
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -102,7 +108,7 @@ jobs:
         env:
           number: ${{ github.event.client_payload.pull_request.number }}
           job: ${{ github.job }}
-          conclusion: ${{ job.status }} 
+          conclusion: ${{ job.status }}
           name: ${{ matrix.name }}
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
@@ -124,7 +130,7 @@ jobs:
               conclusion: process.env.conclusion
             });
             return result;
-      
+
       - name: Dump context
         if: always()
         uses: crazy-max/ghaction-dump-context@v1
