--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -50,9 +50,9 @@ jobs:
 
     steps:
       - name: Check out code
-        uses: actions/checkout@v2
-        with:
-          ref: 'refs/pull/${{ github.event.client_payload.pull_request.number }}/merge'
+        uses: actions/checkout@v3
+        # with:
+        #   ref: 'refs/pull/${{ github.event.client_payload.pull_request.number }}/merge'
 
       - name: Create check run
         uses: actions/github-script@v5
