--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -2,7 +2,7 @@ name: 'e2e Tests'
 
 on:
   push:
-    branches: [master]
+    branches: [e2e]
   repository_dispatch:
     types: [ok-to-test-command]
 
@@ -54,26 +54,26 @@ jobs:
         # with:
         #   ref: 'refs/pull/${{ github.event.client_payload.pull_request.number }}/merge'
 
-      - name: Create check run
-        uses: actions/github-script@v5
-        if: ${{ always() }}
-        env:
-          name: ${{ matrix.name }}
-          number: ${{ github.event.client_payload.pull_request.number }}
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          script: |
-            const { data: pull } = await github.rest.pulls.get({
-              ...context.repo,
-              pull_number: process.env.number
-            });
-            const sha = pull.head.sha;
-            const { data: check } = await github.rest.checks.create({
-              ...context.repo,
-              name: process.env.name,
-              head_sha: sha
-            });
-            return check;
+      # - name: Create check run
+      #   uses: actions/github-script@v5
+      #   if: ${{ always() }}
+      #   env:
+      #     name: ${{ matrix.name }}
+      #     number: ${{ github.event.client_payload.pull_request.number }}
+      #   with:
+      #     github-token: ${{ secrets.GITHUB_TOKEN }}
+      #     script: |
+      #       const { data: pull } = await github.rest.pulls.get({
+      #         ...context.repo,
+      #         pull_number: process.env.number
+      #       });
+      #       const sha = pull.head.sha;
+      #       const { data: check } = await github.rest.checks.create({
+      #         ...context.repo,
+      #         name: process.env.name,
+      #         head_sha: sha
+      #       });
+      #       return check;
 
       - name: Build and push Docker image
         id: docker
@@ -102,34 +102,34 @@ jobs:
           docker pull ${{ steps.docker.outputs.imageFullName }}:${{ github.run_id }}
           docker image inspect ${{ steps.docker.outputs.imageFullName }}:${{ github.run_id }}
 
-      - name: Update check run
-        uses: actions/github-script@v5
-        if: ${{ always() }}
-        env:
-          number: ${{ github.event.client_payload.pull_request.number }}
-          job: ${{ github.job }}
-          conclusion: ${{ job.status }}
-          name: ${{ matrix.name }}
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          script: |
-            const { data: pull } = await github.rest.pulls.get({
-              ...context.repo,
-              pull_number: process.env.number
-            });
-            const ref = pull.head.sha;
-            const { data: checks } = await github.rest.checks.listForRef({
-              ...context.repo,
-              ref
-            });
-            const check = checks.check_runs.filter(c => c.name === process.env.name);
-            const { data: result } = await github.rest.checks.update({
-              ...context.repo,
-              check_run_id: check[0].id,
-              status: 'completed',
-              conclusion: process.env.conclusion
-            });
-            return result;
+      # - name: Update check run
+      #   uses: actions/github-script@v5
+      #   if: ${{ always() }}
+      #   env:
+      #     number: ${{ github.event.client_payload.pull_request.number }}
+      #     job: ${{ github.job }}
+      #     conclusion: ${{ job.status }}
+      #     name: ${{ matrix.name }}
+      #   with:
+      #     github-token: ${{ secrets.GITHUB_TOKEN }}
+      #     script: |
+      #       const { data: pull } = await github.rest.pulls.get({
+      #         ...context.repo,
+      #         pull_number: process.env.number
+      #       });
+      #       const ref = pull.head.sha;
+      #       const { data: checks } = await github.rest.checks.listForRef({
+      #         ...context.repo,
+      #         ref
+      #       });
+      #       const check = checks.check_runs.filter(c => c.name === process.env.name);
+      #       const { data: result } = await github.rest.checks.update({
+      #         ...context.repo,
+      #         check_run_id: check[0].id,
+      #         status: 'completed',
+      #         conclusion: process.env.conclusion
+      #       });
+      #       return result;
 
       - name: Dump context
         if: always()
