--- a/.github/workflows/e2e-base.yml
+++ b/.github/workflows/e2e-base.yml
@@ -2,6 +2,12 @@ name: 'Base e2e Tests'
 
 on:
   workflow_call:
+    inputs:
+      pr-trigger:
+        description: 'True if tests were triggered by a PR'
+        default: false
+        required: true
+        type: boolean
 
 jobs:
   e2e:
@@ -53,13 +59,13 @@ jobs:
 
     steps:
       - name: Check out code current branch
-        if: ${{ inputs.trigger != 'pr' }}
+        if: ${{ !inputs.pr-trigger }}
         uses: actions/checkout@v3
         # with:
         #   ref: 'refs/pull/${{ github.event.client_payload.pull_request.number }}/merge'
 
       - name: Check out merge code
-        if: ${{ inputs.trigger === 'pr' }}
+        if: ${{ inputs.pr-trigger }}
         uses: actions/checkout@v3
         with:
           ref: 'refs/pull/${{ github.event.client_payload.pull_request.number }}/merge'
