--- a/.github/workflows/nightly-e2e.yml
+++ b/.github/workflows/nightly-e2e.yml
@@ -6,83 +6,7 @@ on:
 
 jobs:
   e2e:
-    name: ${{ matrix.name }}
-    runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        include:
-          - name: Docker Hub
-            image: mrsmithers/hello-world
-            registry: docker.io
-            username: DOCKERHUB_USERNAME
-            password: DOCKERHUB_PASSWORD
-            labels: org.opencontainers.image.description="A Hello World image used for e2e tests"
-
-          - name: GCR
-            image: orbital-bank-301021/hello-world
-            registry: gcr.io
-            username: GCR_USERNAME
-            password: GCR_PASSWORD
-            labels: org.opencontainers.image.description="A Hello World image used for e2e tests"
-
-          - name: ECR
-            image: hello-world
-            registry: 026181534292.dkr.ecr.us-west-2.amazonaws.com
-
-          - name: GHCR Legacy
-            image: docker-build-push/e2e-image
-            registry: docker.pkg.github.com
-            username: GH_USERNAME
-            password: GITHUB_TOKEN
-
-          - name: GHCR
-            image: hello-world
-            registry: ghcr.io
-            githubOrg: docker-action-e2e
-            username: GHCR_USERNAME
-            password: GHCR_TOKEN
-
-    steps:
-      - name: Check out code
-        uses: actions/checkout@v2
-
-      - name: Build and push Docker image
-        id: docker
-        uses: ./
-        with:
-          dockerfile: ./e2e/Dockerfile
-          image: ${{ matrix.image }}
-          tags: latest, ${{ github.run_id }}
-          registry: ${{ matrix.registry }}
-          githubOrg: ${{ matrix.githubOrg }}
-          username: ${{ secrets[matrix.username] }}
-          password: ${{ secrets[matrix.password] }}
-          addLatest: ${{ matrix.addLatest }}
-          labels: ${{ matrix.labels }}
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-
-      - name: Verify Docker image
-        run: |
-          docker pull ${{ steps.docker.outputs.imageFullName }}:${{ github.run_id }}
-          docker image inspect ${{ steps.docker.outputs.imageFullName }}:${{ github.run_id }}
-
-      - name: Raise issue on failure
-        if: failure()
-        uses: actions/github-script@v5
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          script: |
-            github.issues.create({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              title: 'e2e test failure',
-              body: `Tests failed in run https://github.com/mr-smithers-excellent/docker-build-push/actions/runs/${context.runId}`,
-              labels: ['Triage']
-            })
-
-      - name: Dump context
-        if: always()
-        uses: crazy-max/ghaction-dump-context@v1
+    uses: ./.github/workflows/e2e-base.yml
+    secrets: inherit
+    with:
+      pr-trigger: false
