--- a/action.yml
+++ b/action.yml
@@ -27,6 +27,9 @@ inputs:
   target:
     description: "Docker build target passed via --target"
     required: false
+  platform:
+    description: "Docker build platform passed via --platform"
+    required: false
   username:
     description: "Docker registry username"
     required: false
