--- a/.github/workflows/nightly-e2e.yml
+++ b/.github/workflows/nightly-e2e.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   e2e:
-    uses: ./.github/workflows/e2e-base.yml
+    uses: ./.github/workflows/e2e.yml
     secrets: inherit
     with:
       pr-trigger: false
