--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -10,8 +10,12 @@ jobs:
       - name: Check out code
         uses: actions/checkout@v2
 
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 16
+
       - name: Build
         run: npm ci
 
-      - name: Run unit tests 
+      - name: Run unit tests
         run: npm run test
