add e2e scenario for skipPush

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -57,6 +57,12 @@ jobs:
             username: GHCR_USERNAME
             password: GHCR_TOKEN
 
+          - name: Private registry
+            image: hello-world
+            dockerfile: ./e2e/multi.Dockerfile
+            registry: private-registry.io
+            skipPush: true
+
     steps:
       - name: Check out code current branch
         if: ${{ !inputs.pr-trigger }}
