--- a/action.yml
+++ b/action.yml
@@ -51,6 +51,10 @@ inputs:
     description: "Enables Docker BuildKit support"
     required: false
     default: "false"
+  pushImage:
+    description: "Flag for disabling the login & push steps, set to true by default"
+    required: false
+    default: "true"
 outputs:
   imageFullName:
     description: "Full name of the Docker image with registry prefix and tag suffix"
@@ -59,7 +63,7 @@ outputs:
   tags:
     description: "Tags for the Docker image"
 runs:
-  using: "node12"
+  using: "node16"
   main: "dist/index.js"
 branding:
   icon: "anchor"
