change input to multiPlatform

--- a/action.yml
+++ b/action.yml
@@ -51,9 +51,10 @@ inputs:
     description: "Enables Docker BuildKit support"
     required: false
     default: "false"
-  enableMultiArch:
-    description: "Enables Docker buildx support"
+  multiPlatform:
+    description: "Builds image with buildx to support multiple platforms"
     required: false
+    default: "false"
   pushImage:
     description: "Flag for disabling the login & push steps, set to true by default"
     required: false
