--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -26,6 +26,15 @@ jobs:
             addLatest: true
             labels: org.opencontainers.image.description="A Hello World image used for e2e tests"
 
+          - name: Multi-platform e2e
+            image: mrsmithers/hello-world
+            dockerfile: ./e2e/Dockerfile
+            registry: docker.io
+            username: DOCKERHUB_USERNAME
+            password: DOCKERHUB_PASSWORD
+            multiPlatform: true
+            platform: linux/amd64,linux/arm64,linux/arm/v7
+
           - name: GCR e2e
             image: orbital-bank-301021/hello-world
             dockerfile: ./e2e/Dockerfile
@@ -70,7 +79,7 @@ jobs:
 
       - name: Create check run
         if: ${{ inputs.pr-trigger }}
-        uses: actions/github-script@v5
+        uses: actions/github-script@v6
         env:
           name: ${{ matrix.name }}
           number: ${{ github.event.client_payload.pull_request.number }}
@@ -117,7 +126,7 @@ jobs:
 
       - name: Update check run
         if: ${{ inputs.pr-trigger }}
-        uses: actions/github-script@v5
+        uses: actions/github-script@v6
         env:
           number: ${{ github.event.client_payload.pull_request.number }}
           job: ${{ github.job }}
