add dependabot exception

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -4,11 +4,12 @@ on: [pull_request]
 
 jobs:
   run-tests:
+    if: ${{ github.actor != 'dependabot[bot]' }}
     name: Unit Tests
     runs-on: ubuntu-latest
     steps:
       - name: Check out code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - uses: actions/setup-node@v3
         with:
