upgrade to eslint 9

--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "5.7.0",
   "description": "Docker Build & Push Action",
   "main": "src/index.js",
+  "type": "module",
   "scripts": {
     "build": "ncc build src/main.js",
     "precommit": "npm run build && git add dist/",
-    "lint": "eslint 'src/**.js' 'tests/**.js' --fix",
-    "test": "eslint 'src/**.js' 'tests/**.js' && jest --coverage",
+    "lint": "npx eslint 'src/**.js' 'tests/**.js' --fix",
+    "test": "npx eslint  'src/**.js' 'tests/**.js' && jest --coverage",
     "test:watch": "npm run test -- --watchAll",
     "prepare": "husky install"
   },
@@ -42,13 +43,10 @@
   },
   "devDependencies": {
     "@vercel/ncc": "^0.38.3",
-    "eslint": "^8.57.0",
-    "eslint-config-airbnb": "^19.0.4",
+    "eslint": "^9.28.0",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-prettier": "^5.4.1",
-    "eslint-plugin-react": "^7.37.5",
     "husky": "^9.1.7",
     "jest": "^29.7.0",
     "mockdate": "^3.0.5",
