add required check for dist

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -20,3 +20,9 @@ jobs:
 
       - name: Run unit tests
         run: npm run test
+
+      - name: Check dist is up-to-date
+        run: |
+          npm run build
+          git add dist/
+          git diff --staged --exit-code || (echo "❌ dist/ is not up-to-date. Please run 'npm run build' and commit the changes." && exit 1)
